# fastspell

./: .gitignore  .gitmodules  CHANGELOG.md  FastSpell.py  README.md  cldspell.py  fastspell.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml
conda_build/: make_build.sh
conda_build/fastspell/: build.sh  meta.yaml
fastspell/: FastSpell.py  __init__.py  fastspell.py  pyfastspell  util.py
fastspell/config/: hunspell.yaml  similar.yaml  tokenizers.yaml
scripts/: fastspell
src/fastspell/: __init__.py  ai.py  fastspell.py  fastspell_download.py  util.py
src/fastspell/config/: hunspell.yaml  similar.yaml
tests/: test_fastspell.py
