[project]
name = "fastspell"
version = "0.6"
license = {file = "LICENSE"}
readme = "README.md"
description = "Targetted language identifier, based on FastText and Hunspell."
requires-python = ">=3.8"
dependencies = [
    "fasttext==0.9.2",
    "hunspell==0.5.5",
    "urllib3",
    "PyYAML",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]

[[project.authors]]
name = "Prompsit Language Engineering"
email = "info@prompsit.com"

[[project.maintainers]]
name = "Marta Bañon"
email = "mbanon@prompsit.com"
[[project.maintainers]]
name = "Jaume Zaragoza"
email = "jzaragoza@prompsit.com"

[project.scripts]
fastspell = "fastspell.fastspell:main"
fastspell-download = "fastspell.fastspell_download:main"

[project.urls]
Homepage = "https://github.com/mbanon/fastspell"
"FastSpell on GitHub" = "https://github.com/mbanon/fastspell"
"Prompsit Language Engineering" = "http://www.prompsit.com"
Paracrawl = "https://paracrawl.eu/"
MaCoCu = "https://macocu.eu"

[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
fastspell = [ "config/*.yaml",]
